adjustment for new endpoint role
